# engram-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  install-hermes.sh  pyproject.toml
.claude-plugin/: marketplace.json
benchmarks/: lane_stress.py
benchmarks/locomo/: README.md
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json  stop.py
examples/: cross_session.py  quickstart.py  restart_demo.py  two_agents_demo.py
hermes-plugin/engram/: README.md  __init__.py  plugin.yaml  verify.py
openclaw-plugin/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw-plugin/nemoclaw/: .dockerignore  Dockerfile  README.md  prepare.sh
openclaw-plugin/nemoclaw/proof/: Dockerfile  proof.py  run.sh
openclaw-plugin/src/: capture.ts  client.ts  config.ts  format.ts  hooks.ts  sidecar.ts  wizard.ts
openclaw-plugin/tests/: helpers.ts  hooks.test.ts  sidecar.test.ts  wizard.test.ts
openclaw-plugin/types/: openclaw-plugin-sdk.d.ts
packaging/: build.sh  engram.spec  engram_entry.py
src/engram/: __init__.py  config.py  ensure.py  profiles.py  server.py  settings.py
src/engram/cli/: __init__.py  demo.py  main.py  stores.py
src/engram/core/: __init__.py  anchors.py  compaction.py  consolidation.py  dates.py  entities.py  eviction.py  extraction.py  memory.py  promotion.py  redaction.py  retrieval.py  rrf.py  salience.py  subjects.py  tags.py
src/engram/embeddings/: __init__.py  base.py  hashing.py  local.py
src/engram/integrations/: __init__.py  hermes.py
src/engram/integrations/claude/: __init__.py  _client.py  session_start.py  settings.py  user_prompt.py
src/engram/storage/: __init__.py  db.py  repository.py  schema.py
